--- a/frontend/Receptionist_UI.form
+++ b/frontend/Receptionist_UI.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="ReceptionistPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="667" height="1863"/>
+      <xy x="20" y="20" width="703" height="1863"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -37,6 +37,12 @@
                 <constraints/>
                 <properties>
                   <text value="Manage Student"/>
+                </properties>
+              </component>
+              <component id="c2106" class="javax.swing.JButton" binding="StudentSubjectRequest">
+                <constraints/>
+                <properties>
+                  <text value="Subject Request"/>
                 </properties>
               </component>
               <component id="3f12a" class="javax.swing.JButton" binding="StudentPaymentButton">
@@ -93,7 +99,7 @@
               </component>
             </children>
           </grid>
-          <grid id="ada1e" binding="StudentDetailTable" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="ada1e" binding="StudentDetailTable" layout-manager="GridLayoutManager" row-count="3" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
@@ -103,7 +109,7 @@
             <children>
               <scrollpane id="dcf86" binding="scrollPane">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="1" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="4" vsize-policy="1" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <horizontalScrollBarPolicy value="30"/>
@@ -125,7 +131,7 @@
               </vspacer>
               <component id="b0f57" class="javax.swing.JButton" binding="DeleteStudentButton">
                 <constraints>
-                  <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Delete Student"/>
@@ -139,9 +145,17 @@
                   <text value="Add Student"/>
                 </properties>
               </component>
+              <component id="197e0" class="javax.swing.JButton" binding="EditStudentButton">
+                <constraints>
+                  <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Edit Student"/>
+                </properties>
+              </component>
             </children>
           </grid>
-          <grid id="d7d83" binding="AddStudentDetails" layout-manager="GridLayoutManager" row-count="10" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="d7d83" binding="AddStudentDetails" layout-manager="GridLayoutManager" row-count="10" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
@@ -259,10 +273,10 @@
                   <text value="Subject: "/>
                 </properties>
               </component>
-              <grid id="33d8f" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="33d8f" binding="checkboxPanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="1" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
@@ -272,6 +286,7 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <selected value="false"/>
                       <text value="Malay"/>
                     </properties>
                   </component>
@@ -311,7 +326,7 @@
               </grid>
               <component id="52d06" class="javax.swing.JButton" binding="submitButton" default-binding="true">
                 <constraints>
-                  <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="9" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Submit"/>
@@ -348,6 +363,14 @@
                   </grid>
                 </constraints>
                 <properties/>
+              </component>
+              <component id="95e58" class="javax.swing.JButton" binding="cancelButton">
+                <constraints>
+                  <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Cancel"/>
+                </properties>
               </component>
             </children>
           </grid>
