--- a/frontend/Admin_UI.form
+++ b/frontend/Admin_UI.form
@@ -66,7 +66,7 @@
               </component>
             </children>
           </grid>
-          <grid id="93d25" binding="ProfileFrame" layout-manager="GridLayoutManager" row-count="8" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="93d25" binding="ProfileFrame" layout-manager="GridLayoutManager" row-count="8" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="8" column="0" row-span="4" col-span="2" vsize-policy="7" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -79,7 +79,7 @@
               <grid id="580ec" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
@@ -115,7 +115,7 @@
               <grid id="17457" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
@@ -151,7 +151,7 @@
               <grid id="88ee0" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
@@ -189,7 +189,7 @@
               <grid id="27f06" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
@@ -227,7 +227,7 @@
               <grid id="5234a" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
@@ -302,7 +302,7 @@
               </grid>
               <grid id="501c0" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
                 <constraints>
-                  <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="7" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
@@ -324,7 +324,7 @@
               </grid>
               <vspacer id="246fa">
                 <constraints>
-                  <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                  <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
                     <preferred-size width="-1" height="30"/>
                   </grid>
                 </constraints>
@@ -494,9 +494,13 @@
                 <children>
                   <scrollpane id="6ec8f">
                     <constraints>
-                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                        <preferred-size width="500" height="-1"/>
+                      </grid>
                     </constraints>
-                    <properties/>
+                    <properties>
+                      <horizontalScrollBarPolicy value="31"/>
+                    </properties>
                     <border type="none"/>
                     <children>
                       <component id="c1021" class="javax.swing.JTable" binding="ReceptionistTable">
@@ -544,7 +548,9 @@
             <children>
               <component id="e7a08" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="98" height="22"/>
+                  </grid>
                 </constraints>
                 <properties>
                   <horizontalAlignment value="11"/>
@@ -559,7 +565,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="a65fd" class="javax.swing.JTextField">
+                  <component id="a65fd" class="javax.swing.JTextField" binding="tutorusernamefield">
                     <constraints>
                       <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
@@ -590,7 +596,7 @@
                       <text value="Password:"/>
                     </properties>
                   </component>
-                  <component id="c1fda" class="javax.swing.JTextField">
+                  <component id="c1fda" class="javax.swing.JTextField" binding="tutorpasswordfield">
                     <constraints>
                       <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -606,7 +612,7 @@
                       <text value="User ID:"/>
                     </properties>
                   </component>
-                  <component id="f0fd0" class="javax.swing.JLabel">
+                  <component id="f0fd0" class="javax.swing.JLabel" binding="showtutorid">
                     <constraints>
                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -622,7 +628,7 @@
                       <text value="Level:"/>
                     </properties>
                   </component>
-                  <component id="6961e" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+                  <component id="6961e" class="javax.swing.JComboBox" binding="TutorLevelComboBox">
                     <constraints>
                       <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
                         <preferred-size width="100" height="-1"/>
@@ -638,7 +644,7 @@
                       <text value="Subjects:"/>
                     </properties>
                   </component>
-                  <component id="4a3e" class="javax.swing.JRadioButton" binding="malayRadioButton" default-binding="true">
+                  <component id="4a3e" class="javax.swing.JRadioButton" binding="malayTutorRadio">
                     <constraints>
                       <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -646,7 +652,7 @@
                       <text value="Malay"/>
                     </properties>
                   </component>
-                  <component id="dfd98" class="javax.swing.JRadioButton" default-binding="true">
+                  <component id="dfd98" class="javax.swing.JRadioButton" binding="chineseTutorRadio">
                     <constraints>
                       <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -654,7 +660,7 @@
                       <text value="Chinese"/>
                     </properties>
                   </component>
-                  <component id="78684" class="javax.swing.JRadioButton" default-binding="true">
+                  <component id="78684" class="javax.swing.JRadioButton" binding="englishTutorRadio">
                     <constraints>
                       <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -662,7 +668,7 @@
                       <text value="English"/>
                     </properties>
                   </component>
-                  <component id="8f66b" class="javax.swing.JRadioButton" default-binding="true">
+                  <component id="8f66b" class="javax.swing.JRadioButton" binding="mathematicsTutorRadio">
                     <constraints>
                       <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -670,7 +676,7 @@
                       <text value="Mathematics"/>
                     </properties>
                   </component>
-                  <component id="56cc" class="javax.swing.JRadioButton" default-binding="true">
+                  <component id="56cc" class="javax.swing.JRadioButton" binding="scienceTutorRadio">
                     <constraints>
                       <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -756,10 +762,12 @@
                     <preferred-size width="350" height="-1"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <horizontalScrollBarPolicy value="30"/>
+                </properties>
                 <border type="none"/>
                 <children>
-                  <component id="7737f" class="javax.swing.JTable">
+                  <component id="7737f" class="javax.swing.JTable" binding="TutorTable">
                     <constraints/>
                     <properties>
                       <autoCreateRowSorter value="true"/>
